Fixed sidebar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,13 @@ body {
   align-items: center;
   flex-direction: row;
   box-sizing: border-box;
+  flex-wrap: wrap;
 }
 
 .mainContent {
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  box-sizing: border-box;
 }
